# mkdocs-drawio-exporter

./: .editorconfig  .gitignore  .tool-versions  CHANGELOG.md  LICENSE.md  README.md  flake.nix  pyproject.toml  requirements.dev.txt  requirements.txt  scripts.py  setup.py
.github/workflows/: ci-docker.yml  ci-native.yml  ci.yml  release.yml
docs/: .gitignore  Dockerfile  Dockerfile.local  build.local.sh  build.sh  docker-compose.yml  docker.md  entrypoint.sh  github-actions.md  mkdocs.yml  requirements.txt
docs/docs/: README.md  my-page.md
docs/docs/assets/: diagram.drawio
docs/docs/my-folder/: my-page.md
mkdocs_drawio_exporter/: __init__.py  exporter.py  plugin.py
mkdocs_drawio_exporter/tests/: __init__.py  exporter.py
mkdocsdrawioexporter/: __init__.py  exporter.py  mkdocsdrawioexporter.py  plugin.py
mkdocsdrawioexporter/tests/: __init__.py  exporter.py
