[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mkdocs-drawio-exporter"
version = "0.10.1"
description = "Exports your Draw.io diagrams at build time for easier embedding into your documentation"
readme = "README.md"
license = "MIT"
authors = [
    "Luke Carrier <luke@carrier.family>",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Documentation",
    "Topic :: Text Processing",
]

[tool.poetry.dependencies]
# We support only Python releases in feature, bug fix, or security maintenance
# https://devguide.python.org/versions/
python = ">=3.8"
click = ">=7.1.2"
jinja2 = ">=3.1.3"
livereload = ">=2.6.3"
markdown = ">=3.3.4"
markupsafe = ">=2.1.5"
mkdocs = ">=1.3.0"
pyyaml = ">=6.0.1"
six = ">=1.16.0"
tornado = ">=6.3.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = ">=0.7.2"

[tool.poetry.urls]
homepage = "https://github.com/LukeCarrier/mkdocs-drawio-exporter"
repository = "https://github.com/LukeCarrier/mkdocs-drawio-exporter"
documentation = "https://github.com/LukeCarrier/mkdocs-drawio-exporter"
Issues = "https://github.com/LukeCarrier/mkdocs-drawio-exporter/issues"
History = "https://github.com/LukeCarrier/mkdocs-drawio-exporter/blob/master/CHANGELOG.md"

[tool.poetry.scripts]
test = "scripts:test"

[tool.poetry.plugins."mkdocs.plugins"]
drawio-exporter = "mkdocs_drawio_exporter:DrawIoExporterPlugin"
